update forked submodule for theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/dark-theme-editor"]
 	path = themes/dark-theme-editor
-	url = https://github.com/JingWangTW/dark-theme-editor
+	url = https://github.com/technicallyawriter/dark-theme-editor.git
