--- a/hugo.yml
+++ b/hugo.yml
@@ -1,14 +1,23 @@
-theme: dark-theme-editor
+# Asciidoc markdown rendering config
+markup:
+  asciidocExt:
+    attributes: {}
+    backend: html5
+    extensions: []
+    failureLevel: fatal
+    noHeaderOrFooter: true
+    preserveTOC: false
+    safeMode: unsafe
+    sectionNumbers: false
+    trace: false
+    verbose: false
+    workingFolderCurrent: false
 
-# automatically stamp lastmod date in frontmatter using git commit info
+# timestamping lastmod dates using git info
 enableGitInfo: true
-frontmatter:
-  lastmod:
-  - lastmod
-  - :git
-  - date
-  - publishDate
 
+# theme config - copied from /themes/dark-theme-editor/hugo.toml
+theme: dark-theme-editor
 params:
   site:
     faviconUrl: ''
