md to adoc; update weights in _index.md files to adjust

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,9 +1,7 @@
 StylesPath = styles
-
 MinAlertLevel = suggestion
-
+Vocab = Blog
 Packages = Google, proselint, write-good, Hugo, Readability
 
-[*]
+[*.{md,adoc}]
 BasedOnStyles = Vale, Google, proselint, write-good, Readability
-
