--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/dark-theme-editor"]
 	path = themes/dark-theme-editor
 	url = https://github.com/JingWangTW/dark-theme-editor.git
+[submodule "themes/hugo-book"]
+	path = themes/hugo-book
+	url = https://github.com/alex-shpak/hugo-book
