--- a/hugo.yml
+++ b/hugo.yml
@@ -20,9 +20,6 @@ menu:
     - name: "Resume"
       url: "https://github.com/alex-shpak/hugo-book"
       weight: 10
-    - name: "Menu #2"
-      url: "https://themes.gohugo.io/hugo-book/"
-      weight: 20
 
 params:
   # (Optional, default light) Sets color theme: light, dark or auto.
@@ -36,11 +33,11 @@ params:
 
   # (Optional, default favicon.png) Set the path to a favicon file.
   # If the favicon is /static/favicon.png then the path would be favicon.png
-  # BookFavicon: "favicon.png"
+  BookFavicon: "favicon.png"
 
   # (Optional, default none) Set the path to a logo for the book.
   # If the logo is /static/logo.png then the path would be logo.png
-  # BookLogo: /logo.png
+  BookLogo: /icon.png
 
   # (Optional, default none) Set leaf bundle to render as side menu
   # When not specified file structure and weights will be used
@@ -49,7 +46,7 @@ params:
   # (Optional, default docs) Specify root page to render child pages as menu.
   # Page is resoled by .GetPage function: https://gohugo.io/functions/getpage/
   # For backward compatibility you can set '*' to render all sections to menu. Acts same as '/'
-  BookSection: '*'
+  BookSection: '/'
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
