--- a/antora.yml
+++ b/antora.yml
@@ -7,7 +7,8 @@ asciidoc:
     table-caption: false
 ui:
   bundle:
-    url: /home/technicallyawriter/git/portfolio-theme/build/ui-bundle.zip 
+    url: https://github.com/technicallyawriter/portfolio/raw/main/theme/ui-bundle.zip
+    snapshot: true
   supplemental_files: ./supplemental-ui
 nav:
   - modules/ROOT/nav.adoc
