--- a/playbook.yml
+++ b/playbook.yml
@@ -10,4 +10,4 @@ ui:
   bundle:
     url: /home/technicallyawriter/git/portfolio-ui/build/ui-bundle.zip
     snapshot: true 
-  supplemental_files: ./supplemental-ui/
+  supplemental_files: ./themes/supplemental-ui/
