--- a/playbook.yml
+++ b/playbook.yml
@@ -6,6 +6,9 @@ content:
   sources:
   - url: https://github.com/technicallyawriter/portfolio.git 
     branches: main 
+asciidoc:
+  attributes:
+    source-highlighter: highlight.js
 ui:
   bundle:
     url: /home/technicallyawriter/git/portfolio-ui/build/ui-bundle.zip
