remove asciidoc attributes from playbook

--- a/playbook.yml
+++ b/playbook.yml
@@ -5,10 +5,7 @@ site:
 content:
   sources:
   - url: https://github.com/technicallyawriter/portfolio.git 
-    branches: main 
-asciidoc:
-  attributes:
-    source-highlighter: highlight.js
+    branches: HEAD
 ui:
   bundle:
     url: /home/technicallyawriter/git/portfolio-ui/build/ui-bundle.zip
