switch vale to Google

--- a/.vale.ini
+++ b/.vale.ini
@@ -2,7 +2,7 @@ StylesPath = styles
 
 MinAlertLevel = suggestion
 
-Packages = RedHat, proselint, write-good, Readability
+Packages = Google, proselint, write-good, Readability
 
 [*]
-BasedOnStyles = Vale, RedHat, proselint, write-good, Readability
+BasedOnStyles = Vale, Google, proselint, write-good, Readability
