update vale config

--- a/.vale.ini
+++ b/.vale.ini
@@ -2,7 +2,9 @@ StylesPath = styles
 
 MinAlertLevel = warning 
 
+Vocab = portfolio
+
 Packages = Google, proselint, write-good, Readability
 
 [*]
-BasedOnStyles = Vale, Google, proselint, write-good, Readability
+BasedOnStyles = Vale, Google, write-good, Readability
