add agile methodology to exceptions list for write-good wordiness

--- a/styles/write-good/TooWordy.yml
+++ b/styles/write-good/TooWordy.yml
@@ -2,6 +2,8 @@ extends: existence
 message: "'%s' is too wordy."
 ignorecase: true
 level: warning
+exceptions:
+  - "Agile methodology"
 tokens:
   - a number of
   - abundance
