--- a/.vale.ini
+++ b/.vale.ini
@@ -8,3 +8,14 @@ Packages = Google, proselint, write-good, Readability
 
 [*]
 BasedOnStyles = Vale, Google, write-good, Readability
+
+# disabled rules
+Google.FirstPerson = NO
+Google.Exclamation = NO
+write-good.Weasel = NO
+Readability.GunningFog = NO
+Readability.ColemanLiau = NO
+Readability.LIX = NO
+Readability.SMOG = NO
+Readability.FleschReadingEase = NO
+Readability.AutomatedReadability = NO
