update vale config

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,18 +4,34 @@ MinAlertLevel = warning
 
 Vocab = portfolio
 
-Packages = Google, proselint, write-good, Readability
+Packages = Google, write-good, Readability
 
-[*]
-BasedOnStyles = Vale, Google, write-good, Readability
+[*{.md,.adoc}]
+BasedOnStyles = Vale, Google, write-good, Readability, portfolio
 
-# disabled rules
+## LOCAL RULES CONFIG
+
 Google.FirstPerson = NO
+
 Google.Exclamation = NO
-write-good.Weasel = NO
+
+# extended in portfolio.WordList
+Google.WordList = NO
+
+write-good.Weasel = yes 
+
 Readability.GunningFog = NO
+
 Readability.ColemanLiau = NO
+
 Readability.LIX = NO
+
 Readability.SMOG = NO
+
+# extended in porfolio.FleschKincaid
+Readability.FleschKincaid = NO
+
 Readability.FleschReadingEase = NO
+
 Readability.AutomatedReadability = NO
+
