--- a/.vale.ini
+++ b/.vale.ini
@@ -15,7 +15,9 @@ Google.FirstPerson = NO
 
 Google.Exclamation = NO
 
-write-good.Weasel = yes 
+write-good.TooWordy = NO 
+
+write-good.Weasel = NO
 
 Readability.GunningFog = NO
 
