--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,11 +20,11 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout
     - name: Configure Pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages
     - name: Install Node.js
-      uses: actions/setup-node@v4
+      uses: actions/setup-node
       with:
         node-version: '20'
     - name: Install Antora
@@ -32,9 +32,9 @@ jobs:
     - name: Generate Site
       run: npx antora playbook.yml
     - name: Upload Artifacts
-      uses: actions/upload-pages-artifact@v2
+      uses: actions/upload-pages-artifact
       with:
         path: build/site
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v2
+      uses: actions/deploy-pages
