--- a/playbook.yml
+++ b/playbook.yml
@@ -5,7 +5,7 @@ site:
 content:
   sources:
   - url: https://github.com/technicallyawriter/portfolio.git 
-    branches: HEAD
+    branches: [main, dev] 
 ui:
   bundle:
     url: https://github.com/technicallyawriter/portfolio/raw/main/themes/ui-bundle.zip
