--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 
 # ignore vale packages but track local vocab 
 .github/styles/*
-!/styles/config/vocabularies
-!/styles/portfolio
+!.github/styles/config/vocabularies
+!.github/styles/portfolio
