Revert "tools/vale"

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@
 /build/
 
 # ignore vale packages but track local vocab 
-.github/styles/*
-!.github/styles/config/vocabularies
-!.github/styles/portfolio
+/styles/*
+!/styles/config/vocabularies
