--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: technicallyawriter 
 title: technicallyawriter
-version: dev
+version: "1.0.0" 
 asciidoc:
   attributes:
     source-language: asciidoc@
