--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -1,12 +1,15 @@
-name: reviewdog
+name: Linting with Vale on pull request
 on: [pull_request]
 
 jobs:
   vale:
-    name: runner / vale
+    name: Linting with Vale
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: errata-ai/vale-action@reviewdog
         with:
+          filter_mode: diff_context
+          vale_flags: "--no-exit --minAlertLevel=error"
+          reporter: github-pr-review
           fail_on_error: true
