--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: technicallyawriter 
 title: technicallyawriter
-version: 1.0.1 
+version: feature/abc 
 asciidoc:
   attributes:
     source-language: asciidoc@
