--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,6 @@
 name: technicallyawriter 
 title: technicallyawriter
+version: feature-xyz
 asciidoc:
   attributes:
     source-language: asciidoc@
