--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
-name: Feature abc
-title: technicallyawriter
+name: technicallyawriter
+title: Feature ABC 
 version: feature-abc
 asciidoc:
   attributes:
