update name in antora.yml

--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
-name: Feature xyz
-title: technicallyawriter
+name: technicallyawriter
+title: Feature XYZ
 version: feature-xyz
 asciidoc:
   attributes:
