update antora.yml info

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
-name: prerelease 
-title: Prerelease
-version: 'feature-xyz'
+name: technicallyawriter 
+title: feature-xyz 
+version: '2.0.0'
 prerelease: -alpha
 asciidoc:
   attributes:
