update you know what

--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
-name: feature-xyz 
-title: Prerelease 
+name: technicallyawriter 
+title: feature-xyz
 version: '2.0.0'
 prerelease: -alpha
 asciidoc:
