--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
-name: technicallyawriter 
-title: feature-xyz
-version: '2.0.0'
+name: prerelease 
+title: '2.0.0'
+version: 'feature/xyz'
 prerelease: -alpha
 asciidoc:
   attributes:
