--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: prerelease 
-title: '2.0.0.'
-version: 'feature-abc'
+title: 'feature-abc'
+version: '2.0.0'
 prerelease: -alpha
 asciidoc:
   attributes:
