--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: prerelease 
-title: 'feature-abc'
-version: '2.0.0'
+title: '2.0.0'
+version: 'feature-abc'
 prerelease: -alpha
 asciidoc:
   attributes:
