--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,6 @@
-name: feature-antora
-title: feature-antora
-version: "1.0.1"
-prerelease: -alpha
+name: technicallyawriter
+title: technicallyawriter
+version: "1.0.0"
 asciidoc:
   attributes:
     source-language: asciidoc@
