--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: technicallyawriter
-title: Portfolio
-version: "1.0.0"
+title: Modularize 
+version: "1.0.1"
 asciidoc:
   attributes:
     source-language: asciidoc@
