change slash to hyphen in component file

--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
-name: feature/modularize
-title: feature/modularize
+name: feature-modularize
+title: feature-modularize
 version: "1.0.1"
 asciidoc:
   attributes:
