--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
-name: feature-modularize
-title: feature-modularize
-version: "1.0.1"
+name: technicallyawriter
+title: Portfolio
+version: "1.0.0"
 asciidoc:
   attributes:
     source-language: asciidoc@
