update vale config to suggestion

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,5 @@
 StylesPath = .github/styles
-MinAlertLevel = warning
+MinAlertLevel = suggestion
 Vocab = portfolio
 Packages = Google, write-good, Readability
 
@@ -11,6 +11,7 @@ Google.FirstPerson = NO
 Google.Exclamation = NO
 write-good.TooWordy = NO
 write-good.Weasel = NO
+write-good.E-Prime= NO
 Readability.GunningFog = NO
 Readability.ColemanLiau = NO
 Readability.LIX = NO
